--- a/src/app/configuracion/configuracion.component.html
+++ b/src/app/configuracion/configuracion.component.html
@@ -290,8 +290,8 @@
       class="svg"
       xmlns="http://www.w3.org/2000/svg"
       xmlns:xlink="http://www.w3.org/1999/xlink"
-      width="auto"
-      height="auto"
+      width="674"
+      height="617"
       viewBox="0 0 807 598"
     >
       <defs>
